# VeriLogos

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION_BUILD_STATUS.md  DOCUMENTATION_SUMMARY.md  LICENSE  README.md  SPHINX_BUILD_REPORT.md  project_structure.txt  pyproject.toml  requirements.txt
docs/: .gitignore  BUILD_SUMMARY.md  README.md  THEORY.md  THEORY_UPDATE_SUMMARY.md  architecture.md  conf.py  developer_guide.md  index.rst  introduction.md  migration_notes.md  requirements.txt
docs/api/: index.rst  layer0_topology.rst  layer1_sclogic.rst  layer2_temporal.rst  layer3_persistence.rst  layer4_application.rst
examples/: run_backtest.py  run_persistence.py  test_all_sources.py  test_engine_live.py  test_nobitex_live.py  visualize_backtest.py
scripts/: download_historical_data.py  generate_sample_data.py  migrate_layer1.py  migrate_layer1_complete.py  sarafi.py
tests/: test_persistence_barcode.py  test_public_api.py
tests/application/: test_layer4_engines.py  test_layer4_integration.py
tests/topology/: test_layer0_imports.py  test_layer1_sclogic.py  test_layer2_temporal.py  test_layer3_persistence.py  test_layer4_engines.py  test_persistence_integration.py
verilogos/: __init__.py
verilogos/application/: __init__.py  engines.py  models.py
verilogos/application/realtime/: __main__.py  monitor.py
verilogos/application/sources/: __init__.py  base.py  kucoin.py  manager.py  nobitex.py  wallex.py
verilogos/backtest/: __init__.py  __main__.py  engine.py
verilogos/core/: __init__.py
verilogos/core/logic/: __init__.py  persistence_entailment.py
(+29 files in other folders)
