[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verilogos"
version = "0.1.0"
description = "VeriLogos - Topological Verification Framework"
authors = [
    {name = "Alireza Pourmoslemi", email = "apmath99@gmail.com"}
]
maintainers = [
    {name = "Alireza Pourmoslemi", email = "apmath99@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["verilogos*"]
